tests are working

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
                 width: 80%;
                 height: 95%;
             }
+
+             
+        th, td, p, input {
+            font:14px Verdana;
+        }
+        table2, th, td 
+        {
+            border: solid 1px #DDD;
+            border-collapse: collapse;
+            padding: 2px 3px;
+            text-align: center;
+        }
+        th {
+            font-weight:bold;
+        }
+    
         </style>
     </head>
     <body>
@@ -56,6 +72,8 @@
                 </td>
             </tr>
         </table>
+
+        <p id="showData"></p>
 
         <script src="dist/bundle.js"></script>
     </body>
